# ohme_client

./: .env.vault  .gitignore  pyproject.toml  renovate.json  setup.cfg
.github/: tests.yml
ohme/: api.py  firebase.py  make_requests.py  ohme_minimum_schema.json  parser.py
test/: CALCULATING.json  DISCONNECTED.json  RETRIEVING_SOC.json  SMART_CHARGE.json  test_api.py  test_e2e.py  test_firebase.py  test_make_requests.py  test_parser.py
